# netrek-client-paradise

./: ChangeLog  Makefile.in  README  TODO  configure  configure.in
doc/: README.SOUND  paradise.1  paradise.1.in  sample.tedrc
docs/: CHANGELOG  HOWTO.COMPILE.DEBIAN.VMWARE  sample.paradiserc
images/: README  sbexplosion.xbm
images/Fed/: CL.xpm  CV.xpm  FR.xpm  JS.xpm  PT.xpm  UT.xpm  WB.xpm
images/Fed.bronco/: AS.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
images/Fed.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
images/Fed.colored/: AS.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
images/Ind/: AS.xbm  AS.xpm  BB.xbm  BB.xpm  CA.xbm  CA.xpm  CL.xpm  CV.xpm  DD.xbm  DD.xpm  FR.xpm  JS.xpm  PT.xbm  PT.xpm  SB.xbm  SB.xpm  SC.xbm  SC.xpm  UT.xpm  WB.xpm  borgcube.bm
images/Kli/: CL.xpm  CV.xpm  JS.xpm  PT.xpm  UT.xpm  WB.xpm
images/Kli.bronco/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
images/Kli.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
images/Kli.colored/: AS.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
images/Ori/: CL.xpm  CV.xpm  JS.xpm  PT.xpm  UT.xpm  WB.xpm
images/Ori.bronco/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm
images/Ori.bronco.colored/: AS.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm  hej
images/Ori.colored/: AS.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm  del_me
images/Rom/: BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  UT.xpm  WB.xpm
images/Rom.bronco/: AS.xpm  AS.xpm.painted  AT.xpm  BB.xpm.plain  CA.xpm.plain  DD.xpm.plain  SB.xpm  SC.xpm
images/Rom.bronco.colored/: AS.xpm  AT.xpm  BB.xpm  CA.xpm  DD.xpm  SB.xpm  SC.xpm  SC.xpm.painted
images/Rom.colored/: AS.xpm  BB.xpm  CA.xpm  CL.xpm  CV.xpm  DD.xpm  FR.xpm  JS.xpm  PT.xpm  SB.xpm  SC.xpm  UT.xpm  WB.xpm
images/Rom.starwars/: AS.xpm  BB.xpm  CA.xpm  DD.xpm  SC.xpm
images/planets/T_overlay/: fedplanet.xpm
images/weapons/: mdrone.xbm  mplasmacloud.xbm
include/: config.h  config.h.in  data.h  defs.h  gppackets.h  images.h  packets.h  proto.h  strfuncs.h  struct.h  uname.h  version.h
scripts/: expiretime.in  mkcredits.in  mkimgsrc.in  mkimgsrc.works
src/: Makefile.in  Va.h  Wlib.h  beeplite.c  blk_parsemotd.c  colors.c  credits.c  dashboard.c  data.c  death.c  defaultlogos.h  defaults.c  defines.h.in  defs.h  defwin.c  detonate.c  die.c  die.h  distress.c  dmessage.c  enter.c  feature.c  findslot.c  gameconf.c  gameconf.h  getname.c  getship.c  helpwin.c  hockey.c  images.c  images.h  imath.c  inform.c  input.c  interface.c  keymap.c  local.c  macros.c  macrowin.c  main.c  (+42 more)
src/gmp/: Makefile
src/rsa/: Makefile.in  expire.c  expire.perl  scrambleargs.perl
src/xpm/lib/: data.c
src/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
